--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -7,13 +7,13 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
+  build-on-windows:
 
     runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v4
-    - name: Build
+    - name: build-debug
       run: cargo build --verbose
 
     - name: Upload a Build Artifact
@@ -22,8 +22,25 @@ jobs:
         # Artifact name
         name: rust-test.exe
         # A file, directory or wildcard pattern that describes what to upload
-        path: ./target/debug/rust-test.exe
+        path: ./target/*/rust-test.exe
         # The desired behavior if no files are found using the provided path.
+
     
-        
-    
+  build-on-linux:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: build-debug
+      run: cargo build --verbose
+    - name: build-release
+      run: cargo build --release --verbose
+
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v3.2.1-node20
+      with:
+        # Artifact name
+        name: rust-test
+        # A file, directory or wildcard pattern that describes what to upload
+        path: ./target/*/rust-test
+        # The desired behavior if no files are found using the provided path.
