--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,6 +15,8 @@ jobs:
     - uses: actions/checkout@v4
     - name: build-debug
       run: cargo build --verbose
+    - name: build-release
+      run: cargo build --release --verbose
 
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.2.1-node20
